<resources>
    <string name="app_name">Quiz Master</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>`
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Questions">Questions appear here…</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="instructions1">1. Do not navigate out of the quiz screen. If you do so, the test will be closed.</string>
    <string name="instructions2">2. You cannot navigate to the previous question.</string>
    <string name="instructions3">3. You will have 12 questions in this test.</string>
    <string name="instructions4">4. Each question carries 1 mark.</string>
    <string name="instructions5">5.All The Best!!!</string>
    <string name="instructions">INSTRUCTIONS :</string>
    <string name="next">Next</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="your_score">You Scored </string>
    <string name="question">Question: 1/12</string>
    <string name="completion">You have successfully completed today\'s quiz.</string>
    <string name="quiz_submit_error">Fatal error occurred cannot submit scores, Please try again later.</string>
    <string name="back">You navigated out of the quiz screen.\nYou cannot take the quiz again.\nDo not repeat this.</string>
    <string name="welcome">Welcome to Master Quiz!!!</string>
    <string name="start">Start Quiz</string>
    <string name="ok">OK</string>
    <string name="init_30">00:30</string>
    <string name="No">You don\'t have any test scheduled today…</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="user">User</string>
    <string name="prev">Prev</string>
    <string name="finish">Finish Test</string>
    <string name="timeup">Your time is up…</string>
    <string name="questions_total_attended">Attended</string>
    <string name="questions_total_answered">Answered correctly</string>
    <string name="total_points">Points</string>
    <string name="statistics">Statistics</string>
    <string name="profile_add_summary">+ Add user summary</string>
    <string name="profile_action_message">Message</string>
    <string name="profile_add_link_title">Link</string>

    <!--intent extras-->
    <string name="extra_profile_id">extraProfileFirebaseUid</string>

    <string name="extra_chat_inboxId">extraChatInboxId</string>
    <string name="extra_chat_userId">extraChatUserId</string>

    <string name="announcement_fragment_title">Announcement</string>
    <string name="chat_fragment_title">Chat</string>

    <!--fragment_announce-->
    <string name="announce_title_hint">Title</string>
    <string name="announce_message_hint">Message</string>
    <string name="announce_action_announce">Announce</string>
    <string name="announce_action_add_attachment">Add attachment</string>

    <!--temps-->
    <string name="under_construction_text">Page under construction</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_pref_file">setting_pref_file</string>
    <string name="settings_isDark">settingsIsDark</string>
    <string name="settings_theme_toggle">Dark Theme</string>
    <string name="settings_isAdmin">settingsIsAdmin</string>


    <string name="chat_action_video_call">Video Call</string>
    <string name="attachment_link_format">📄 %1$s</string>
    <string name="logout">Logout</string>

    <string name="finishNetworkDown">An error has occurred, please try again later</string>

    <string name="announce_add_file_hint">Add files with url</string>
    <string name="profile_add_link">Tap to add link</string>
    <string name="no_test">Test will be scheduled only from Monday to Friday</string>
    <string name="no_test_header">No test</string>

    <string name="ai_name">Wumpus</string>
    <string name="login_hint">Login using your issued calibre account</string>
    <string name="attachment_input_empty">URL should not be empty, provide a valid url or browse a file</string>
    <string name="attachment_input_title">Enter file URL</string>
    <string name="default_user_name">User</string>
    <string name="default_user_points">0 points</string>
    <string name="points_formatter">%1$s points</string>
    <string name="branch">Branch</string>
    <string name="chat_fetch_error">Error fetching chat, try again later</string>
    <string name="send_bar_hint">Say something...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_branch">Search Branch</string>
</resources>
