<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/view_padding_medium">

        <TextView
            android:id="@+id/question_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/question_num"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/text_view_countdown"
            android:freezesText="true"
            android:text="@string/init_30"
            android:textSize="30sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/Questions"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/B"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <RadioButton
            android:id="@+id/choice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/C"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <RadioButton
            android:id="@+id/choice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/D"
            android:textSize="20sp"/>

    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_margin="16dp"
        android:text="@string/next" />

</LinearLayout>
