<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/view_padding_medium">


        <EditText
            android:id="@+id/announceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/announce_title_hint"
            android:padding="@dimen/view_padding_small" />

        <EditText
            android:id="@+id/annnounceMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/attachment_bg"
            android:gravity="top|start"
            android:hint="@string/announce_message_hint"
            android:lines="12"
            android:padding="@dimen/view_padding_small" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/announceAttachmentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/announce_action_add_attachment"
                android:src="@drawable/ic_verification_mark" />

            <ImageButton
                android:id="@+id/attachmentAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/announce_action_add_attachment"
                android:src="@drawable/ic_attachment" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>