<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_header_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    app:layout_collapseMode="parallax"
    tools:showIn="@layout/activity_profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_padding_small"
        android:layout_marginEnd="@dimen/view_padding_small"
        android:layout_marginBottom="@dimen/view_padding_small"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileToolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/default_user" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_padding_medium"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/view_padding_small">

            <EditText
                android:id="@+id/userName"
                style="@style/Base.TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:enabled="false"
                android:fadingEdge="horizontal"
                android:fadingEdgeLength="@dimen/fading_edge_length"
                android:lines="1"
                android:text="@string/default_user_name" />


            <TextView
                android:id="@+id/profilePoints"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_padding_medium"
                android:fadingEdge="horizontal"
                android:fadingEdgeLength="@dimen/fading_edge_length"
                android:lines="1"
                android:text="@string/default_user_points" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profileMessageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_padding_small"
            android:contentDescription="@string/profile_action_message"
            android:src="@drawable/message_icon"
            android:visibility="gone" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>